Added swagger annotations for login and remove 'localhost' in main.go
